--- a/_.config.yml
+++ b/_.config.yml
@@ -6,7 +6,7 @@ relative_links:
   collections: true
 include:
   - CONTRIBUTING.md
-  - README.md
+  - index.md
   - LICENSE.md
   - COPYING.md
   - CODE_OF_CONDUCT.md
