--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 
 title: Alessandro Pucci
-description: ---
+description: Unity 3D Game Developer
 plugins:
   - jekyll-relative-links
 relative_links:
