fix social title

--- a/_config.yml
+++ b/_config.yml
@@ -123,7 +123,7 @@ social:
     url: "https://www.linkedin.com/in/a-pucci/"
   - title: "github"
     url: "https://github.com/a-pucci"
-  - title: "gitab"
+  - title: "gitlab"
     url: "https://gitlab.com/a-pucci"
 
 
