--- a/_config.yml
+++ b/_config.yml
@@ -132,7 +132,7 @@ social:
 # 404 page #
 ############
 
-err-404-img: "/img/labtocat.png"
+err-404-img: "/img/404_astronaut.png"
 
 ################################################################################
 
