--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ favicon: "/img/favicon.ico"
 # Header layout #
 ################
 
+# black-favicon: "/img/web-app/icon-36p.png"
 background-img: "../img/bg.png"
 
 ##############################
