--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ delete-delay: 5000
 lines: # You can add HTML Tags in the Text
   - text: "Unity3D Game Developer"
 
-# me-img: "/img/photo2.jpg"
+me-img: "../img/photo.jpg"
 
 # To use facebook profile pic comment the previous line and uncomment the following
 # line, and replace 'user_id' with your facebook user id.
@@ -68,7 +68,7 @@ lines: # You can add HTML Tags in the Text
 # To use github profile pic uncomment the following line and replace 'user_name'
 # with your github user name.
 
-me-img: "https://github.com/a-pucci.png?size=500"
+# me-img: "https://github.com/a-pucci.png?size=500"
 
 ##############################
 # Color the browser elements #
