--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ me-img: "../img/photo.jpg"
 # To use github profile pic uncomment the following line and replace 'user_name'
 # with your github user name.
 
-# me-img: "https://github.com/a-pucci.png?size=500"
+me-img: "https://github.com/a-pucci.png?size=500"
 
 ##############################
 # Color the browser elements #
