Update education and projects

--- a/_data/education.yml
+++ b/_data/education.yml
@@ -17,4 +17,6 @@
   quote: >
 
   description: | # this will include new lines to allow paragraphs
-    Even if I didn't finish University, I attended courses of Algorithm and Data Structures, Algebra, Math, Programming. 
+    Altough I didn't finished University, I spent 2 years attending courses.
+
+    I learnt the foundament of Programming, and attended courses of Algorithm and Data Structures, Operating System. 
