--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-repository: a-pucci/a-pucci.github.io
+repository: sproogen/modern-resume-theme
 favicon: images/favicon.ico
 
 # Personal info
@@ -58,8 +58,8 @@ more_content: | # this will include new lines to allow paragraphs
 footer_show_references: true
 
 # Build settings
-theme: modern-resume-theme # (Use this is you are hosting your resume yourself)
-# remote_theme: sproogen/modern-resume-theme # (Use this if you are hosting your resume on GitHub)
+# theme: modern-resume-theme # (Use this is you are hosting your resume yourself)
+remote_theme: sproogen/modern-resume-theme
 
 sass:
   sass_dir: _sass
