--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-repository: sproogen/modern-resume-theme
+repository: a-pucci/a-pucci.github.io
 favicon: images/favicon.ico
 
 # Personal info
