--- a/_data/education.yml
+++ b/_data/education.yml
@@ -11,7 +11,7 @@
 
 
 - layout: left
-  name: Siena University
+  name: University of Siena
   dates: 2010 - 2013
   qualification: Computer Science
   quote: >
@@ -19,4 +19,4 @@
   description: | # this will include new lines to allow paragraphs
     Altough I didn't finished University, I spent 2 years attending courses.
 
-    I learnt the foundament of Programming, and attended courses of Algorithm and Data Structures, Operating System. 
+    I learnt the principles of Programming, and attended courses of Algorithm and Data Structures, Operating System.
