--- a/_data/education.yml
+++ b/_data/education.yml
@@ -17,6 +17,6 @@
   quote: >
 
   description: | # this will include new lines to allow paragraphs
-    Altough I didn't finished University, I spent 2 years attending courses.
+    Altough I didn't complete University, I spent 2 years attending courses.
 
     I learnt the principles of Programming, and attended courses of Algorithm and Data Structures, Operating System.
