--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ name: Alessandro Pucci
 title: Unity3D Developer
 email: a_pucci@hotmail.it
 phone: "+393476670548"
-website: a-pucci.it
+# website: a-pucci.it
 curriculum: a_pucci_cv.pdf
 
 # Social links
