--- a/_config.yml
+++ b/_config.yml
@@ -27,15 +27,15 @@ linkedin_username: a-pucci
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-      Hi, my name's Alessandro Pucci and i'm a Unity3D developer.
+      Hi, my name is Alessandro Pucci and i am a Unity3D developer.
 
       I grew up with a SNES controller in my hands playing Donkey Kong and getting fascinated about videogames.
 
-      After some years attending computer science courses at Siena University, i coosed to pursue my passion for games and start searching something that could fit me better.
+      After some years attending computer science courses at Siena University, i choosed to pursue my passion for games and start searching something that could fit me better.
 
       One cold day of October 2016 i stumbled in [Event Horizon School](http://eventhorizoncg.com/it/){:target="_blank"}, a game dev school, so i decided to sign up the day next.
 
-      Currently i'm attending the third year at [TheSign Comics & Arts Academy](https://thesign.academy/){:target="_blank"}, a partner of Event Horizon School in Florence.
+      Currently i am attending the third year at [TheSign Comics & Arts Academy](https://thesign.academy/){:target="_blank"}, a partner of Event Horizon School in Florence.
 
 # Projects Section
 # projects_title: Projects
