--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,9 @@ about_content: | # this will include new lines to allow paragraphs
 
       One cold day of October 2016 i stumbled in [Event Horizon School](http://eventhorizoncg.com/it/){:target="_blank"}, a game dev school, so i decided to sign up the day next.
 
-      Currently i am attending the third year at [TheSign Comics & Arts Academy](https://thesign.academy/){:target="_blank"}, a partner of Event Horizon School in Florence.
+      
+      In 2019 I completed the studies with a final grade of 30/30.
+      Currently I am working as Game Programming assistant professor at [TheSign Comics & Arts Academy](https://thesign.academy/){:target="_blank"}, a partner of Event Horizon School in Florence.
 
 # Projects Section
 # projects_title: Projects
