--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ gitlab_username: a-pucci
 # facebook_username: jekyll
 # flickr_username: jekyll
 # instagram_username: jekyll
-linkedin_username: a-pucci
+# linkedin_username: a-pucci
 # pinterest_username: jekyll
 # youtube_username: jekyll
 # googleplus_username: +jekyll
