--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,7 +3,7 @@
   dates: 11/2018 - Today
   #link: #github.com/TheSignAcademy/cu1819_ttt_U3D
   screen: /images/screens/trip_tennis_tournament.png
-  github: TheSignAcademy/cu1819_ttt_U3D
+  github: a-pucci/TTT_scripts
   quote: >
     Competitive local multiplayer game based on tennis in a vaporwawe atmosphere.
 
@@ -18,7 +18,7 @@
   dates: 11/2017 - 09/2018
   #link: #gitlab.com/a-pucci/NukeAlarm
   screen: /images/screens/nuke_alarm.png
-  gitlab: a-pucci/NukeAlarm
+  gitlab: a-pucci/nuke_alarm
   quote: >
     Puzzle game where you are president's secretary.
 
