--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,6 @@
 - layout: left
   name: Trip Tennis Tournament
-  dates: 11/2018 - Today
+  dates: 11/2018 - 09/2019
   #link: #github.com/TheSignAcademy/cu1819_ttt_U3D
   screen: /images/screens/trip_tennis_tournament.png
   github: a-pucci/TTT_scripts
