--- a/_data/education.yml
+++ b/_data/education.yml
@@ -5,9 +5,10 @@
   quote: >
 
   description: | # this will include new lines to allow paragraphs
-    During my time attending this school I learnt to work with Unity3D engine, to use programming best practices, to work with Git.
 
-    I also developed some key skills useful in game development such as teamwork and working to tight deadlines.
+     During my time attending this school I learnt programming in Unity engine, best practices, optimizations, and to work with Git.
+
+     I also developed some key skills useful in game development such as teamwork, communication and working with milestones.
 
 
 - layout: left
@@ -17,6 +18,6 @@
   quote: >
 
   description: | # this will include new lines to allow paragraphs
-    Altough I didn't complete my studies at University, I spent 2 years attending courses.
+     Altough I didn't complete my studies at University, I spent 2 years attending courses.
 
-    I learnt the principles of Programming, and attended courses of Algorithm and Data Structures, Operating System.
+     I learnt the principles of Programming, and attended courses of Algorithms, Data Structures, Operating System.
