--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,9 +1,21 @@
 - layout: left
-  company: The Boring Company
-  link: boringcompany.com
-  job_title: Senior Network System Administrator
-  dates: November 2017 - Present
+  company: CINIC Games
+  link: cinicgames.com
+  job_title: Junior Programmer
+  dates: October 2019 - Present
   quote: >
-   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+
   description: | # this will include new lines to allow paragraphs
-    Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+    Worked on Extra Coin Project. Implemented UI, Gameplay mechanics, created editor Tools for improving working and testing pipelines.
+
+- layout: left
+  company: TheSign Comics & Arts Academy
+  link: thesign.academy
+  job_title: Teacher Assistant
+  dates: October 2019 - July 2021
+  quote: >
+
+  description: | # this will include new lines to allow paragraphs
+    I taught Game Design Patterns, Editor Scripting and Networking using Unity engine.
+    Tool programming using Windows Forms.
+    FMOD scripting using JavaScript.
