--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ favicon: images/favicon.ico
 # Personal info
 name: Alessandro Pucci
 title: Unity Developer
-email: a_pucci@hotmail.it
+email: a_pucci@pm.me
 phone: "+393476670548"
 # website: a-pucci.it
 # curriculum: a_pucci_cv.pdf
