--- a/_data/education.yml
+++ b/_data/education.yml
@@ -18,6 +18,6 @@
   quote: >
 
   description: | # this will include new lines to allow paragraphs
-     Altough I didn't complete my studies at University, I spent 2 years attending courses.
+     Although I didn't complete my studies at University, I spent 2 years attending courses.
 
      I learnt the principles of Programming, and attended courses of Algorithms, Data Structures, Operating System.
