--- a/_config.yml
+++ b/_config.yml
@@ -29,9 +29,9 @@ about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
       Hi, my name is Alessandro Pucci and i am a Unity developer.
 
-      I grew up with a SNES controller in my hands playing Donkey Kong and getting fascinated about videogames.
+      I grew up with a SNES controller in my hands playing Donkey Kong, and later Final Fantasy and World of Warcraft, and i fell in love with videogames.
 
-      After some years attending computer science courses at Siena University, i choosed to pursue my passion for games and start searching something that could fit me better.
+      After some years attending computer science courses at Siena University, i chose to pursue my passion for games and start searching something that could fit me better.
 
       One cold day of October 2016 i stumbled in [Event Horizon School](http://eventhorizoncg.com/it/){:target="_blank"}, a game dev school, so i decided to sign up the day next.
       
