--- a/_data/education.yml
+++ b/_data/education.yml
@@ -7,7 +7,7 @@
   description: | # this will include new lines to allow paragraphs
 
      During my time attending this school I learnt programming in Unity engine, best practices, optimizations, and to work with Git.<br/>
-     I also developed some key skills useful in game development such as teamwork, communication and working with milestones.<br/>
+     I also developed some key skills useful in game development such as teamwork, communication and a scheduled work.<br/>
 
 
 - layout: left
